# connect4-deep-rl

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  README.md  agent_8hpp_source.html  annotated.html  cell_8hpp_source.html  class_agent-members.html  class_agent.html  class_c4_dataset-members.html  class_c4_dataset.html  class_cell-members.html  class_cell.html  class_custom_sink-members.html  class_custom_sink.html  class_environment-members.html  class_environment.html  class_game-members.html  class_game.html  class_input_parser-members.html  class_input_parser.html  class_logger-members.html  class_logger.html  class_m_c_t_s-members.html  class_m_c_t_s.html  class_neural_network-members.html  class_neural_network.html  class_node-members.html  class_node.html  class_self_play_settings-members.html  class_self_play_settings.html  class_settings-members.html  class_settings.html  class_stdout_sink-members.html  class_stdout_sink.html  class_trainer-members.html  class_trainer.html  class_trainer_settings-members.html  (+60 more)
.devcontainer/: devcontainer.json
docs/html/: annotated.html  cell_8hpp_source.html  class_agent.html  class_c4_dataset-members.html  class_cell-members.html  class_cell.html  class_custom_sink-members.html  class_custom_sink.html  class_environment.html  class_game.html  class_input_parser-members.html  class_logger.html  class_m_c_t_s-members.html  class_node.html  class_self_play_settings-members.html  class_stdout_sink.html  class_trainer-members.html  class_trainer_settings-members.html  classes.html  classtqdm-members.html  common_8hpp_source.html  dataset_8hpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_746481c990c0990ec37d77e813051e87.html  dir_c44c95bf3b41c3321c6014770d618ac8.html  functions.html  hierarchy.html  logger_8hpp_source.html  mcts_8hpp_source.html  neural_network_8hpp_source.html  node_8hpp_source.html  policy_head_8hpp_source.html  self_play_settings_8hpp_source.html  struct_agent_data.html  struct_conv_block_impl-members.html  struct_loss_history-members.html  struct_memory_element-members.html  struct_policy_head_impl.html  struct_residual_block_impl-members.html  struct_self_play_tally-members.html  (+2 more)
docs/html/search/: all_2.js  all_8.js  all_9.js  all_b.js  all_d.js  classes_0.js  classes_5.js  classes_6.js  classes_9.js  files_0.js  functions_0.js  functions_2.js  functions_a.js  functions_b.js  functions_d.js  functions_e.js
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  files_0.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+12 more)
src/: agent.cpp  agent.hpp  common.hpp  dataset.cpp  dataset.hpp  game.cpp  game.hpp  main.cpp  mcts.cpp  mcts.hpp  neuralNetwork.cpp  neuralNetwork.hpp  settings.cpp  settings.hpp  test.hpp  train.cpp  train.hpp  types.hpp  utils.cpp  utils.hpp
src/connect4/: cell.cpp  cell.hpp  environment.cpp  environment.hpp  player.hpp
src/logger/: customSink.hpp  logger.cpp  logger.hpp  stdoutSink.cpp  stdoutSink.hpp
src/neuralNetwork/: convBlock.hpp  network.hpp  policyHead.hpp  residualBlock.hpp  valueHead.hpp
src/tree/: node.cpp  node.hpp
src/utils/: inputParser.hpp  selfPlaySettings.cpp  selfPlaySettings.hpp  settings.cpp  settings.hpp  test.cpp  test.hpp  tqdm.h  trainerSettings.cpp  trainerSettings.hpp  types.hpp  utils.cpp  utils.hpp
